# ray-test

./: pyproject.toml  ray_deployment.py  run_vllm_single_node.sh  test_connection.py
template/: template_blip2.jinja
