[project]
name = "data-factory"
version = "0.1.0"
description = ""
authors = [
    {name = "jeesookim"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "vllm (>=0.7.2)",
    "fastapi (>=0.115.8)",
    "torch (>=2.3.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "ray[serve] (>=2.42.0,<3.0.0)",
    "setuptools (>=75.8.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "locust (>=2.33.0,<3.0.0)",
    "starlette (==0.45.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "pytorch-gpu-src"}
torchvision = {source = "pytorch-gpu-src"}

